now trying mayur's code

--- a/index..html
+++ b/index..html
@@ -15,7 +15,11 @@
       <div class="navbar">
         <ul>
           <li class="search">
-            <input type="text" placeholder="Search" />
+            <input
+              type="text"
+              placeholder=" &#xf02b; Search"
+              style="font-family: FontAwesome;"
+            />
           </li>
           <li>Alert</li>
           <li>avatar</li>
@@ -26,7 +30,42 @@
     <!-- main -->
     <main>
       <!-- songs -->
-      <section></section>
+      <section>
+        <div class="main-class">
+          <!-- carousel -->
+          <section class="carousel">
+            <div class="side"><img src="download (1).jpeg" alt="" /></div>
+            <div class="middle"><img src="download (2).jpeg" alt="" /></div>
+            <div class="side"><img src="download.jpeg" alt="" /></div>
+          </section>
+          <!-- latest release -->
+          <section class="latest-release">
+            <h2>Latest Release</h2>
+            <div class="release-cards">
+              <div class="release-card">
+                <img src="" alt="singer" />
+                Name <br />
+                27 Oct 2019
+              </div>
+              <div class="release-card">
+                <img src="" alt="singer" />
+                Name <br />
+                27 Oct 2019
+              </div>
+              <div class="release-card">
+                <img src="" alt="singer" />
+                Name <br />
+                27 Oct 2019
+              </div>
+              <div class="release-card">
+                <img src="" alt="singer" />
+                Name <br />
+                27 Oct 2019
+              </div>
+            </div>
+          </section>
+        </div>
+      </section>
       <!-- queue -->
       <aside></aside>
     </main>
